--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class = "headerMiddle">
                     <p>
-                        Code Ninjas Pleasanton
+                        <b>Code Ninjas Pleasanton</b>
                     </p>
                 </div>
                 <div class = "headerRight">
