--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
             <div class = "nameWrapper">
                 <a href="#">
                     <div class = "name">
-                        <p>Name</p>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class = "name">
-                        <p>Name</p>
+                        <p>Brandon Y</p>
                     </div>
                 </a>
     
