--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class = "nameWrapper">
                 <a href="#">
                     <div class = "name">
-                        <p>Brandon Y</p>
+                        <p>Brandon.Y</p>
                     </div>
                 </a>
     
