--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </p>
             </div>
             <div class = "nameWrapper">
-                <a href="#">
+                <a href="https://taizawa5.github.io/BrandonY_blackbelt/">
                     <div class = "name">
                         <p>Brandon.Y</p>
                     </div>
